--- a/index.html
+++ b/index.html
@@ -367,15 +367,15 @@
       <div class="container">
         <ul>
           <li><img src="./images/person.png"/> Sheena Chen</li>
-          <li><img src="./images/sex.png"/> Female</li>
-          <li><img src="./images/birthday.png"/> 1991.04.13</li>
-          <li><img src="./images/degree.png"/> Master</li>
+          <li><img src="./images/sex.png"/> xxxxx</li>
+          <li><img src="./images/birthday.png"/> xxxx.xx.xx</li>
+          <li><img src="./images/degree.png"/> xxxxx</li>
         </ul>
         <ul>
-          <li><img src="./images/phone.png"/> 15210846260</li>
-          <li><img src="./images/email.png"/> sheenacxy@163.com</li>
-          <li><img src="./images/qq.png"/> 278822173</li>
-          <li><img src="./images/wechat.png"/> fruittea</li>
+          <li><img src="./images/phone.png"/> xxxxxxxxxxx</li>
+          <li><img src="./images/email.png"/> xxxx@163.com</li>
+          <li><img src="./images/qq.png"/> xxxxxxxxx</li>
+          <li><img src="./images/wechat.png"/> xxxxxxxxx</li>
         </ul>
       </div>
     </div>
